[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "release-announcement"
version = "0.1.0"
description = "Jamulus release announcement automation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "ollama",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
