cmake_minimum_required(VERSION 3.22)
project(jamulus_wrapper LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Enable Qt auto tools so .ui/.moc are handled automatically
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

# Prefer Qt6, but accept Qt5 as a fallback. Require at least one.
find_package(Qt6 COMPONENTS Core Network Widgets Xml Concurrent Gui QUIET)
if (Qt6_FOUND)
    set(QT_LIBS Qt6::Core Qt6::Network Qt6::Widgets Qt6::Xml Qt6::Concurrent Qt6::Gui)
else()
    find_package(Qt5 COMPONENTS Core Network Widgets Xml Concurrent QUIET)
    if (Qt5_FOUND)
        set(QT_LIBS Qt5::Core Qt5::Network Qt5::Widgets Qt5::Xml Qt5::Concurrent)
    else()
        message(FATAL_ERROR "Could not find Qt6 or Qt5. Please set Qt6_DIR or Qt5_DIR or add Qt to CMAKE_PREFIX_PATH.")
    endif()
endif()

add_library(jamulus_wrapper STATIC
    jamulus_wrapper.cpp
    virtual_sound/virtual_sound.h
    plugin/PluginProcessor.cpp
    plugin/PluginProcessor.h
)

target_sources(jamulus_wrapper PRIVATE audio_fifo.cpp)
target_sources(jamulus_wrapper PRIVATE asioshim.cpp)

target_include_directories(jamulus_wrapper PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ../src)
target_link_libraries(jamulus_wrapper PRIVATE ${QT_LIBS})
# Link against winmm for MIDI APIs used by the Jamulus core on Windows
if (WIN32)
    target_link_libraries(jamulus_wrapper PRIVATE winmm)
endif()

# We need GUI support now - remove HEADLESS define
target_compile_definitions(jamulus_wrapper PRIVATE APP_VERSION=\"0.0.0\" NOMINMAX)

# Build Jamulus core as a static library and link it into the wrapper
    add_subdirectory(libjamulus)
    # jamulus_wrapper exposes the jamulus core API to consumers (plugins), so
    # propagate linkage to the core as PUBLIC so downstream targets linking
    # `jamulus_wrapper` also link `jamulus_core`.
    target_link_libraries(jamulus_wrapper PUBLIC jamulus_core)
    
    # Include the autogenerated UI headers from jamulus_core
    target_include_directories(jamulus_wrapper PRIVATE 
        ${CMAKE_BINARY_DIR}/libjamulus/jamulus_core_autogen/include_$<CONFIG>
        ${CMAKE_BINARY_DIR}/libjamulus/jamulus_core_autogen/include
    )

message(STATUS "jamulus_wrapper target created. jamulus_core will be built and linked.")

# If the bundled Opus library wasn't added (or in other edge cases), provide
# our small linker stubs. When `opus` target exists we must NOT add stubs to
# avoid duplicate symbol definitions.
if (TARGET opus)
    message(STATUS "Found Opus target; skipping stubs_linker.cpp to avoid duplicate symbols.")
else()
    message(STATUS "Opus target not found; adding stubs_linker.cpp to jamulus_wrapper.")
    target_sources(jamulus_wrapper PRIVATE stubs_linker.cpp)
endif()

# Test executable to exercise the wrapper in a simple host-less run
add_executable(jamulus_test
    test/main.cpp
)
target_link_libraries(jamulus_test PRIVATE jamulus_wrapper)
target_include_directories(jamulus_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
set_target_properties(jamulus_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# If JUCE is available, build the VST3 plugin scaffold in `plugin/`.
if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/plugin/CMakeLists.txt")
    message(STATUS "No JUCE plugin scaffold found in plugin/")
else()
    # If a local JUCE checkout exists under third_party, add it so the
    # JUCE CMake targets are available. JUCE requires a newer CMake, so
    # ensure this project requests at least 3.22 above.
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/third_party/JUCE/CMakeLists.txt")
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/JUCE)
    endif()
    add_subdirectory(plugin)

    # Probe tool to scan and instantiate a VST3 using JUCE's headless plugin-hosting code.
    # This prints a concrete error string when a plugin "fails to load".
    if (TARGET juce_audio_processors_headless AND NOT TARGET juce::juce_audio_processors_headless)
        add_library(juce::juce_audio_processors_headless ALIAS juce_audio_processors_headless)
    endif()

    if (TARGET juce::juce_audio_processors_headless)
        add_executable(vst3_load_probe
            test/vst3_load_probe.cpp
        )
        target_link_libraries(vst3_load_probe PRIVATE juce::juce_audio_processors_headless)
        target_compile_definitions(vst3_load_probe PRIVATE JUCE_PLUGINHOST_VST3=1)
        set_target_properties(vst3_load_probe PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
    else()
        message(STATUS "JUCE headless hosting module not available; skipping vst3_load_probe")
    endif()
endif()
